[project]
name = "pydts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dale Black", email = "djblack@uci.edu" }
]
dependencies = [
    "juliacall>=0.9.20",
    "numpy>=1.26.4",
    "torch>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pydts"]
