[project]
name = "distance_transforms_py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dale Black", email = "djblack@uci.edu" }
]
dependencies = [
    "juliacall>=0.9.20",
    "numpy>=1.25.0",
    "torch>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pydts"]
